Bug #6016: Fix EBCDIC logic error in urlencode() (a strchr() test was used backwards) Reported by: dumbunny@tivo.com

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@29872 c90b9560-bf6c-de11-be94-00142212c4b1